--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
 
-
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'androidx.appcompat:appcompat:1.6.1'
