--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,17 +27,36 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     buildFeatures {viewBinding true}
+
 }
 
 dependencies {
+
+    //Custom progress bar ***
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    //******************
+
+    //lottie***********
+    def lottieVersion = "6.0.0"
+    implementation "com.airbnb.android:lottie:$lottieVersion"
+
+   // implementation 'com.github.Asutosh11:DocumentReader:0.12'
+    implementation "androidx.multidex:multidex:2.0.1"
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.karumi:dexter:6.2.3'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+    implementation (
+            group: 'com.aspose',
+            name: 'aspose-words',
+            version: '23.3',
+            classifier: 'android.via.java')
 }
