--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,7 @@ pluginManagement {
         jcenter()
         mavenCentral()
 
+
     }
 }
 dependencyResolutionManagement {
@@ -13,6 +14,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter()
+        maven {url "https://repository.aspose.com/repo/" }
 
     }
 }
